build tensorflow library

--- a/platform/exacto/templates/afina/calc/mods.conf
+++ b/platform/exacto/templates/afina/calc/mods.conf
@@ -143,4 +143,9 @@ configuration conf {
 	include embox.compat.posix.fs.all_dvfs
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
+
+	// base library files
+	include third_party.tensorflow.tf
+	// here is example
+	include exacto.tf_module.start
 }
