last config to tensorflow

--- a/platform/exacto/templates/afina/calc/mods.conf
+++ b/platform/exacto/templates/afina/calc/mods.conf
@@ -143,7 +143,13 @@ configuration conf {
 	include embox.compat.posix.fs.all_dvfs
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
+	//cpp block
+	//include third_party.lib.libgcc_toolchain
+    //include embox.lib.cxx.libsupcxx_standalone
 
+    //include third_party.boost.libs
+	// @Runlevel(0) include third_party.lib.newlib_compat.reent
+	include embox.lib.cxx.DestructionStatic(table_size=32)
 	// base library files
 	include third_party.tensorflow.tf
 	// here is example
