--- a/platform/exacto/templates/afina/calc/build.conf
+++ b/platform/exacto/templates/afina/calc/build.conf
@@ -40,10 +40,10 @@ CFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
 
 CXXFLAGS += -g  
 
-CXXFLAGS += -O0 
+CXXFLAGS += -O3 
 CXXFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding
 CXXFLAGS += -fomit-frame-pointer
-CXXFLAGS += -std=gnu++11 
+CXXFLAGS += -std=c++11 
 CXXFLAGS += -fno-threadsafe-statics -fno-unwind-tables
 CXXFLAGS += -ffunction-sections -fdata-sections -fmessage-length=0 
 CXXFLAGS += -Werror -Wsign-compare -Wdouble-promotion -Wshadow -Wunused-variable 
