--- a/platform/exacto/templates/afina/calc/mods.conf
+++ b/platform/exacto/templates/afina/calc/mods.conf
@@ -150,6 +150,10 @@ configuration conf {
     //include third_party.boost.libs
 	// @Runlevel(0) include third_party.lib.newlib_compat.reent
 	include embox.lib.cxx.DestructionStatic(table_size=32)
+//	include embox.compat.libc.all
+//	include embox.compat.libc.stdio.asprintf
+//	include embox.compat.libc.math_builtins
+
 	// base library files
 	include third_party.tensorflow.tf
 	// here is example
