options for right compilation

--- a/platform/exacto/templates/afina/calc/build.conf
+++ b/platform/exacto/templates/afina/calc/build.conf
@@ -29,7 +29,7 @@ CROSS_COMPILE = arm-none-eabi-
 CFLAGS += -O0 
 CFLAGS += -g  
 CFLAGS += -fomit-frame-pointer 
-CFLAGS +=  -std=gnu11 
+//CFLAGS +=  -std=gnu11 
 CFLAGS += -fno-unwind-tables -ffunction-sections -fdata-sections -fmessage-length=0
 CFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding
 //CFLAGS += -mfloat-abi=soft
@@ -43,7 +43,7 @@ CXXFLAGS += -g
 CXXFLAGS += -O3 
 CXXFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding
 CXXFLAGS += -fomit-frame-pointer
-CXXFLAGS += -std=c++11 
+//CXXFLAGS += -std=c++11 
 CXXFLAGS += -fno-threadsafe-statics -fno-unwind-tables
 CXXFLAGS += -ffunction-sections -fdata-sections -fmessage-length=0 
 CXXFLAGS += -Werror -Wsign-compare -Wdouble-promotion -Wshadow -Wunused-variable 
@@ -56,7 +56,7 @@ CXXFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
 
 //CXXFLAGS += -fno-rtti -fno-exceptions 
 CFLAGS += -DTF_LITE_STATIC_MEMORY -DTF_LITE_DISABLE_X86_NEON -DTF_LITE_USE_CTIME 
-CXXFLAGS += -DTF_LITE_STATIC_MEMORY -DTF_LITE_DISABLE_X86_NEON -DTF_LITE_USE_CTIME 
+CXXFLAGS += -DTF_LITE_STATIC_MEMORY -DTF_LITE_DISABLE_X86_NEON -DTF_LITE_USE_CTIME -D__STDCPP_WANT_MATH_SPEC_FUNCS__
 //-I. -I./third_party/gemmlowp -I./third_party/flatbuffers/include -I./third_party/ruy -I./third_party/kissfft
 //-DTF_LITE_STATIC_MEMORY -DTF_LITE_DISABLE_X86_NEON 
 //-DTF_LITE_USE_CTIME 
