--- a/platform/exacto/templates/afina/calc/mods.conf
+++ b/platform/exacto/templates/afina/calc/mods.conf
@@ -153,7 +153,7 @@ configuration conf {
 	include embox.compat.libc.all
 	include embox.compat.libc.math
 //	include embox.compat.libc.stdio.asprintf
-	include embox.compat.libc.math_builtins
+	//include embox.compat.libc.math_builtins
 	//include embox.compat.libc.math_openlibm
 
 	// base library files
