add reporter starter kit

--- a/platform/exacto/templates/afina/basis/mods.conf
+++ b/platform/exacto/templates/afina/basis/mods.conf
@@ -143,4 +143,6 @@ configuration conf {
 	include embox.compat.posix.fs.all_dvfs
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
+
+	include exacto.cmds.report.main_report
 }
