--- a/platform/exacto/templates/afina/basis/mods.conf
+++ b/platform/exacto/templates/afina/basis/mods.conf
@@ -4,7 +4,8 @@ package genconfig
 configuration conf {
 	@Runlevel(0) include embox.arch.system(core_freq=216000000)
 	@Runlevel(0) include embox.arch.arm.cortexm3.bundle
-	include platform.exacto.afina.calc.bsp	
+	include platform.exacto.afina.basis.bsp	
+	include platform.exacto.afina.basis.arch
 	@Runlevel(0) include third_party.bsp.stmf7cube.sdram(fmc_swap=true)
 	/* Can be enabled after SD card will be fixed. Currently it uses DMA
 	 * and may become broken. */
