--- a/platform/exacto/templates/afina/basis/mods.conf
+++ b/platform/exacto/templates/afina/basis/mods.conf
@@ -88,12 +88,12 @@ configuration conf {
 	include embox.driver.tty.task_breaking_disable
 
 	@Runlevel(2) include embox.cmd.msleep
-	@Runlevel(2) include embox.cmd.shell
-	//@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "cd export exit logout httpd")
+	//@Runlevel(2) include embox.cmd.shell
+	@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "cd export exit logout httpd")
 	//include embox.init.setup_tty_diag
-	//@Runlevel(3) include embox.init.start_script(shell_name="tish", tty_dev="ttyS0", shell_start=1, stop_on_error=true)
-	//include embox.init.system_start_service(log_level=3, tty_dev="ttyS0")
-	@Runlevel(3) include embox.init.start_script(shell_name="diag_shell")
+	@Runlevel(3) include embox.init.start_script(shell_name="tish", tty_dev="ttyS0", shell_start=1, stop_on_error=true)
+	include embox.init.system_start_service(log_level=3, tty_dev="ttyS0")
+	//@Runlevel(3) include embox.init.start_script(shell_name="diag_shell")
 
 	include embox.cmd.mem
 	include embox.cmd.goto
