try to fix baud rate error and impl ll stm32f7lib

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -152,4 +152,6 @@ configuration conf {
 	include embox.driver.block_dev
 
 	include exacto.cmds.report.main_report
+	@Runlevel(2) include exacto.afina.spi.spi1
+	@Runlevel(2) include exacto.commander.data_storage
 }
