--- a/platform/exacto/templates/afina/cliner/build.conf
+++ b/platform/exacto/templates/afina/cliner/build.conf
@@ -33,7 +33,7 @@ CXXFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding
 CXXFLAGS += -fomit-frame-pointer
 CXXFLAGS += -fno-threadsafe-statics -fno-unwind-tables
 CXXFLAGS += -ffunction-sections -fdata-sections -fmessage-length=0 
-CXXFLAGS += -Werror -Wsign-compare -Wdouble-promotion -Wshadow -Wunused-variable 
+CXXFLAGS += -Wsign-compare -Wdouble-promotion -Wshadow -Wunused-variable 
 CXXFLAGS += -Wmissing-field-initializers -Wunused-function -Wswitch -Wvla -Wall -Wextra
 CXXFLAGS += -Wstrict-aliasing -Wno-unused-parameter   
 CXXFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard 
