--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -25,6 +25,9 @@ configuration conf {
 	include embox.kernel.critical
 	include embox.kernel.irq_static
 	include embox.kernel.spinlock(spin_debug=false)
+	//include embox.kernel.task.single
+	//include embox.kernel.task.resource.idesc_table(idesc_table_size=12)
+	//include embox.kernel.task.task_no_table
 
 	@Runlevel(1) include embox.kernel.timer.sys_timer(timer_quantity=2)
 	@Runlevel(1) include embox.kernel.timer.strategy.head_timer
@@ -51,6 +54,13 @@ configuration conf {
 	include embox.kernel.task.resource.idesc_table(idesc_table_size=12)
 	include embox.kernel.task.task_no_table
 
+//	include embox.kernel.thread.thread_local_none
+//	include embox.kernel.thread.thread_cancel_disable
+//	include embox.kernel.thread.signal_stub
+//	include embox.kernel.task.resource.sig_table(sig_table_size=8)
+//	include embox.kernel.sched.sched
+//	include embox.kernel.sched.idle_light
+//	include embox.kernel.thread.core(stack_align=4,thread_stack_size = 256,thread_pool_size=2)
 	include embox.kernel.thread.thread_none
 	include embox.kernel.thread.thread_local_none
 	include embox.kernel.thread.thread_cancel_disable
@@ -69,7 +79,15 @@ configuration conf {
 	include embox.framework.embuild_light(use_mod_names=true)
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
-
+	/* generate runlevel driver for spi interface */
+	@Runlevel(2) include apollon_slave.spi_gen.spi1
+	@Runlevel(2) include exacto_commander.data_storage
+	@Runlevel(2) include exacto_commander.sensors
+	@Runlevel(2) include apollon_slave.spi_gen.spi2
+	/* include cmd test_spi_dma_send */
+	include apollon_slave.cmd.test_spi_dma_send
+	include apollon_slave.cmd.test_sensors
+	include apollon_slave.cmd.report_init
 
 
 }
