init build done

--- a/platform/exacto/templates/apollon/init/mods.conf
+++ b/platform/exacto/templates/apollon/init/mods.conf
@@ -6,7 +6,8 @@ configuration conf {
 
 	/* stm cube files */
 	include third_party.bsp.stmf1cube.cube
-	include platform.exacto.afina.basis.arch
+	include platform.exacto.apollon.basis.arch
+	include platform.exacto.apollon.basis.bsp
 	
 	@Runlevel(0) include embox.arch.arm.armmlib.locore
 	@Runlevel(0) include embox.arch.system(core_freq=72000000)
@@ -14,17 +15,23 @@ configuration conf {
 
 	@Runlevel(1) include embox.driver.interrupt.cortexm_nvic
 	@Runlevel(1) include embox.driver.clock.cortexm_systick
+	include embox.kernel.time.jiffies(cs_name="cortexm_systick")
 
 	/* shell config */
 	@Runlevel(1) include embox.driver.serial.stm_usart_f1(baud_rate=115200, usartx=2)
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__stm_usart_f1")
 	include embox.driver.serial.core_notty
 
+	include embox.driver.gpio.stm32_gpio_f1
+
 	include embox.driver.periph_memory_stub
 
 	include embox.kernel.critical
 	include embox.kernel.irq_static
 	include embox.kernel.spinlock(spin_debug=false)
+	include embox.kernel.task.single
+	include embox.kernel.task.resource.idesc_table(idesc_table_size=12)
+	include embox.kernel.task.task_no_table
 
 	@Runlevel(1) include embox.kernel.timer.sys_timer(timer_quantity=2)
 	@Runlevel(1) include embox.kernel.timer.strategy.head_timer
@@ -37,19 +44,16 @@ configuration conf {
 	include embox.fs.driver.devfs_stub
 
 	/* Cooperative-only scheduling */
-	//@Runlevel(2) include embox.kernel.sched.boot_light
+	@Runlevel(2) include embox.kernel.sched.boot_light
 	@Runlevel(2) include embox.kernel.sched.timing.none
 
 	include embox.cmd.sys.version
 	include embox.cmd.help
+	include embox.cmd.testing.ticker
 
 	@Runlevel(2) include embox.cmd.shell
 	include embox.init.setup_tty_diag
 	@Runlevel(3) include embox.init.start_script(shell_name="diag_shell")
-
-	include embox.kernel.task.single
-	include embox.kernel.task.resource.idesc_table(idesc_table_size=12)
-	include embox.kernel.task.task_no_table
 
 	include embox.kernel.thread.thread_none
 	include embox.kernel.thread.thread_local_none
@@ -57,9 +61,7 @@ configuration conf {
 	include embox.kernel.thread.stack_none
 	include embox.kernel.thread.signal_stub
 
-
 	@Runlevel(1) include embox.kernel.lthread.lthread
-
 	@Runlevel(2) include embox.kernel.sched.sched
 	@Runlevel(2) include embox.kernel.sched.idle_light
 	@Runlevel(2) include embox.kernel.sched.sched_ticker_stub
@@ -69,7 +71,6 @@ configuration conf {
 	include embox.framework.embuild_light(use_mod_names=true)
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
-
-
+	
 
 }
