--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -6,7 +6,8 @@ configuration conf {
 
 	/* stm cube files */
 	include third_party.bsp.stmf1cube.cube
-	include platform.exacto.afina.basis.arch
+	include platform.exacto.apollon.basis.arch
+	include platform.exacto.apollon.basis.bsp
 	
 	@Runlevel(0) include embox.arch.arm.armmlib.locore
 	@Runlevel(0) include embox.arch.system(core_freq=72000000)
@@ -14,6 +15,7 @@ configuration conf {
 
 	@Runlevel(1) include embox.driver.interrupt.cortexm_nvic
 	@Runlevel(1) include embox.driver.clock.cortexm_systick
+	include embox.kernel.time.jiffies(cs_name="cortexm_systick")
 
 	/* shell config */
 	@Runlevel(1) include embox.driver.serial.stm_usart_f1(baud_rate=115200, usartx=2)
@@ -25,9 +27,6 @@ configuration conf {
 	include embox.kernel.critical
 	include embox.kernel.irq_static
 	include embox.kernel.spinlock(spin_debug=false)
-	//include embox.kernel.task.single
-	//include embox.kernel.task.resource.idesc_table(idesc_table_size=12)
-	//include embox.kernel.task.task_no_table
 
 	@Runlevel(1) include embox.kernel.timer.sys_timer(timer_quantity=2)
 	@Runlevel(1) include embox.kernel.timer.strategy.head_timer
@@ -54,13 +53,6 @@ configuration conf {
 	include embox.kernel.task.resource.idesc_table(idesc_table_size=12)
 	include embox.kernel.task.task_no_table
 
-//	include embox.kernel.thread.thread_local_none
-//	include embox.kernel.thread.thread_cancel_disable
-//	include embox.kernel.thread.signal_stub
-//	include embox.kernel.task.resource.sig_table(sig_table_size=8)
-//	include embox.kernel.sched.sched
-//	include embox.kernel.sched.idle_light
-//	include embox.kernel.thread.core(stack_align=4,thread_stack_size = 256,thread_pool_size=2)
 	include embox.kernel.thread.thread_none
 	include embox.kernel.thread.thread_local_none
 	include embox.kernel.thread.thread_cancel_disable
@@ -79,15 +71,9 @@ configuration conf {
 	include embox.framework.embuild_light(use_mod_names=true)
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
-	/* generate runlevel driver for spi interface */
-	@Runlevel(2) include apollon_slave.spi_gen.spi1
-	@Runlevel(2) include exacto_commander.data_storage
-	@Runlevel(2) include exacto_commander.sensors
-	@Runlevel(2) include apollon_slave.spi_gen.spi2
-	/* include cmd test_spi_dma_send */
-	include apollon_slave.cmd.test_spi_dma_send
-	include apollon_slave.cmd.test_sensors
-	include apollon_slave.cmd.report_init
 
+	//@Runlevel(2) include exacto.apollon.spi.spi1
+	//@Runlevel(2) include exacto.commander.data_storage
+	@Runlevel(2) include exacto.cmds.tests.spi_dma_send
 
 }
