add transmit receive spi command

--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -74,6 +74,6 @@ configuration conf {
 
 	//@Runlevel(2) include exacto.apollon.spi.spi1
 	//@Runlevel(2) include exacto.commander.data_storage
-	@Runlevel(2) include exacto.cmds.tests.spi_dma_send
+	@Runlevel(2) include exacto.cmds.tests.spi_dma_receive
 
 }
