some minor changes for afina

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -154,5 +154,5 @@ configuration conf {
 	include exacto.cmds.report.main_report
 	@Runlevel(2) include exacto.afina.spi.spi1
 	@Runlevel(2) include exacto.commander.data_storage
-	include exacto.cmds.tests.spi_dma_afina_transmit
+	include exacto.cmds.tests.spi_dma_transmit_receive
 }
