add abstract module spi_dev

--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -72,8 +72,8 @@ configuration conf {
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
 
-	@Runlevel(2) include exacto.apollon.spi.spi2
-	//@Runlevel(2) include exacto.commander.data_storage
+	@Runlevel(2) include exacto.apollon.spi.spi2slave
 	include exacto.cmds.tests.spi_dma_receive_transmit
+	include exacto.cmds.tests.spi_dma_transmit_receive
 
 }
