--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -105,6 +105,7 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	@Runlevel(3) include exacto.afina.spi.spi1
+	@Runlevel(3) include exacto.afina.spi.spi1master
 	include exacto.cmds.tests.spi_dma_transmit_receive
+	include exacto.cmds.tests.spi_dma_receive_transmit
 }
