--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -74,6 +74,6 @@ configuration conf {
 
 	@Runlevel(2) include exacto.apollon.spi.spi2slave
 	include exacto.cmds.tests.spi_dma_receive_transmit
-	include exacto.cmds.tests.spi_dma_transmit_receive
+	//include exacto.cmds.tests.spi_dma_transmit_receive
 
 }
