--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -107,5 +107,6 @@ configuration conf {
 
 	@Runlevel(3) include exacto.afina.spi.spi1master
 	//include exacto.cmds.tests.spi_dma_transmit_receive
-	include exacto.cmds.tests.spi_dma_receive_transmit
+	//include exacto.cmds.tests.spi_dma_receive_transmit
+	include exacto.cmds.tests.spi_dma_one_txrx
 }
