--- a/platform/exacto/templates/afina/cliner/build.conf
+++ b/platform/exacto/templates/afina/cliner/build.conf
@@ -18,7 +18,7 @@ CROSS_COMPILE = arm-none-eabi-
 // See https://bugs.launchpad.net/gcc-arm-embedded/+bug/1592635
 // Moreover, as it stated in the bug, "We advise against the use of both -mcpu and -march switches"
 CFLAGS += -O0 
-CFLAGS += -g  
+CFLAGS += -g3  
 CFLAGS += -fomit-frame-pointer 
 CFLAGS += -fno-unwind-tables -ffunction-sections -fdata-sections -fmessage-length=0
 CFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding
