--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -59,7 +59,7 @@ configuration conf {
 	include embox.driver.tty.task_breaking_disable
 
 	@Runlevel(2) include embox.cmd.msleep
-	@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "cd export exit logout httpd")
+	@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "export exit logout httpd")
 	@Runlevel(3) include embox.init.start_script(shell_name="tish", tty_dev="ttyS0", shell_start=1, stop_on_error=true)
 	include embox.init.system_start_service(log_level=3, tty_dev="ttyS0")
 
