--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -51,7 +51,7 @@ configuration conf {
 	include embox.kernel.sched.idle_light
 
 	include embox.kernel.lthread.lthread
-	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=5000)
+	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=8192)
 
 	/* tty requires */
 	include embox.kernel.thread.mutex
@@ -69,6 +69,8 @@ configuration conf {
 	include embox.cmd.fs.ls
 	include embox.cmd.fs.cat
 	include embox.cmd.fs.mount
+	include embox.cmd.fs.cd
+	include embox.cmd.fs.mkdir
 	
 
 	include embox.compat.posix.proc.vfork_exchanged
