--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -71,6 +71,7 @@ configuration conf {
 	include embox.cmd.fs.mount
 	include embox.cmd.fs.cd
 	include embox.cmd.fs.mkdir
+	include embox.cmd.fs.dd
 	
 
 	include embox.compat.posix.proc.vfork_exchanged
