--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -72,7 +72,8 @@ configuration conf {
 	include embox.cmd.fs.cd
 	include embox.cmd.fs.mkdir
 	include embox.cmd.fs.dd
-	
+	include embox.cmd.hw.partition	
+	include embox.driver.block.partition
 
 	include embox.compat.posix.proc.vfork_exchanged
 	include embox.compat.posix.proc.exec_exchanged
