--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -55,7 +55,7 @@ configuration conf {
 
 	/* tty requires */
 	include embox.kernel.thread.mutex
-	include embox.driver.tty.tty(rx_buff_sz=16, io_buff_sz=16)
+	include embox.driver.tty.tty(rx_buff_sz=32, io_buff_sz=32)
 	include embox.driver.tty.task_breaking_disable
 
 	@Runlevel(2) include embox.cmd.msleep
@@ -73,7 +73,11 @@ configuration conf {
 	include embox.cmd.fs.mkdir
 	include embox.cmd.fs.dd
 	include embox.cmd.hw.partition	
+	include embox.cmd.hw.lsblk
 	include embox.driver.block.partition
+	
+	//include embox.cmd.testing.fb_direct_access
+	//include embox.driver.video.fb
 
 	include embox.compat.posix.proc.vfork_exchanged
 	include embox.compat.posix.proc.exec_exchanged
