add simple read file

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -117,4 +117,5 @@ configuration conf {
 	//include exacto.cmds.tests.spi_dma_transmit_receive
 	//include exacto.cmds.tests.spi_dma_receive_transmit
 	include exacto.cmds.tests.spi_dma_one_txrx
+	include exacto.cmds.tests.print_to_sd
 }
