--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -118,4 +118,6 @@ configuration conf {
 	//include exacto.cmds.tests.spi_dma_receive_transmit
 	include exacto.cmds.tests.spi_dma_one_txrx
 	include exacto.cmds.tests.print_to_sd
+	include exacto.afina.tim.tim3
+	include exacto.afina.blink.basic
 }
