--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -121,4 +121,5 @@ configuration conf {
 	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.cmds.tests.tim_printer
 	include exacto.afina.blink.basic
+	include exacto.cmds.sensor.storage_run
 }
