--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -74,10 +74,10 @@ configuration conf {
 
 	@Runlevel(2) include exacto.apollon.spi.spi2slave
 	@Runlevel(2) include exacto.apollon.spi.spi1
-	//include exacto.cmds.tests.spi_dma_receive_transmit
+	include exacto.cmds.tests.spi_dma_receive_transmit
 	//include exacto.cmds.tests.spi_dma_transmit_receive
 	@Runlevel(2) include exacto.apollon.tim.tim3
 //	include exacto.cmds.tests.tim_printer
-	include exacto.cmds.sensor.simple_comm
+//	include exacto.cmds.sensor.simple_comm
 
 }
