--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -122,4 +122,7 @@ configuration conf {
 	include exacto.cmds.tests.tim_printer
 	include exacto.afina.blink.basic
 	include exacto.cmds.sensor.storage_run
+	include exacto.cmds.mliner.disable_spi_master
+	include exacto.cmds.mliner.enable_spi_master
+	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 }
