--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -79,5 +79,7 @@ configuration conf {
 	@Runlevel(2) include exacto.apollon.tim.tim3
 //	include exacto.cmds.tests.tim_printer
 //	include exacto.cmds.sensor.simple_comm
-
+	include exacto.cmds.mliner.enabler
+	include exacto.cmds.mliner.disabler
+	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 }
