--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -42,7 +42,7 @@ configuration conf {
 	//@Runlevel(2) include embox.kernel.sched.boot_light
 	@Runlevel(2) include embox.kernel.sched.timing.none
 
-	include embox.cmd.sys.version
+	//include embox.cmd.sys.version
 	include embox.cmd.help
 
 	@Runlevel(2) include embox.cmd.shell
@@ -77,9 +77,10 @@ configuration conf {
 	include exacto.cmds.tests.spi_dma_receive_transmit
 	//include exacto.cmds.tests.spi_dma_transmit_receive
 	@Runlevel(2) include exacto.apollon.tim.tim3
-//	include exacto.cmds.tests.tim_printer
-//	include exacto.cmds.sensor.simple_comm
-	include exacto.cmds.mliner.enabler
-	include exacto.cmds.mliner.disabler
+	//	include exacto.cmds.tests.tim_printer
+	// include exacto.cmds.sensor.simple_comm
+	include exacto.cmds.sensor.sns_reader
+	//	include exacto.cmds.mliner.enabler
+	//	include exacto.cmds.mliner.disabler
 	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 }
