--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -43,7 +43,7 @@ configuration conf {
 	@Runlevel(2) include embox.kernel.sched.timing.none
 
 	//include embox.cmd.sys.version
-	include embox.cmd.help
+	//include embox.cmd.help
 
 	@Runlevel(2) include embox.cmd.shell
 	include embox.init.setup_tty_diag
@@ -74,15 +74,9 @@ configuration conf {
 
 	@Runlevel(2) include exacto.apollon.spi.spi2slave
 	@Runlevel(2) include exacto.apollon.spi.spi1
-	// include exacto.cmds.tests.spi_dma_receive_transmit
-	//include exacto.cmds.tests.spi_dma_transmit_receive
 	@Runlevel(2) include exacto.apollon.tim.tim3
-	//	include exacto.cmds.tests.tim_printer
-	// include exacto.cmds.sensor.simple_comm
 	
-	@Runlevel(2) include exacto.cmds.sensor.sns_reader
-	//	include exacto.cmds.mliner.enabler
-	//	include exacto.cmds.mliner.disabler
+	@Runlevel(2) include exacto.cmds.sensor.sns_service
 	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 	include exacto.cmds.mliner.spi_txrx
 }
