--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -77,10 +77,10 @@ configuration conf {
 	@Runlevel(2) include exacto.spi.sns_apollon
 	@Runlevel(2) include exacto.apollon.tim.tim3
 	
-	//@Runlevel(2) include exacto.cmds.sensor.sns_service
-	//@Runlevel(2) include exacto.apollon.gpio.gpio_spi
-	//include exacto.cmds.mliner.spi_txrx
+	@Runlevel(2) include exacto.cmds.sensor.sns_service
+	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
+	include exacto.cmds.mliner.spi_txrx
 	//include exacto.cmds.tests.spi_dma_receive_transmit
 	//include exacto.cmds.tests.buffer_fifo_test
-	include exacto.cmds.tests.sns_reader_smpl
+	//include exacto.cmds.tests.sns_reader_smpl
 }
