spi dma tim based sender done

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -120,6 +120,7 @@ configuration conf {
 	include exacto.cmds.tests.print_to_sd
 	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.cmds.tests.tim_printer
+	include exacto.cmds.tests.spi_dma_tim_based
 	include exacto.cmds.tests.lights
 	include exacto.afina.blink.basic
 	include exacto.cmds.sensor.storage_run
