--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -127,4 +127,6 @@ configuration conf {
 	include exacto.cmds.mliner.disable_spi_master
 	include exacto.cmds.mliner.enable_spi_master
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
+
+	@Runlevel(3) include exacto.commander.filemanager
 }
