--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -128,5 +128,5 @@ configuration conf {
 	include exacto.cmds.mliner.enable_spi_master
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 
-	@Runlevel(3) include exacto.commander.filemanager
+	 include exacto.commander.filemanager
 }
