--- a/platform/exacto/templates/afina/cliner/build.conf
+++ b/platform/exacto/templates/afina/cliner/build.conf
@@ -6,38 +6,15 @@ ARCH = arm
 
 CROSS_COMPILE = arm-none-eabi-
 
+CFLAGS += -O0 -g
+CFLAGS += -mthumb -mlittle-endian
+CFLAGS += -ffreestanding
 
 /* FIXME: It's right: CFLAGS += -mtune=cortex-m7 -march=armv7-m */
+CFLAGS += -mcpu=cortex-m7
 
 /* Switch between FPU and non-FPU modes */
 /* CFLAGS += -msoft-float */
+CFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard
 
 
-
-// We do not pass -march=armv7e-m because it does not working together with -mcpu=cortex-m7
-// See https://bugs.launchpad.net/gcc-arm-embedded/+bug/1592635
-// Moreover, as it stated in the bug, "We advise against the use of both -mcpu and -march switches"
-CFLAGS += -O0 
-CFLAGS += -g3  
-CFLAGS += -fomit-frame-pointer 
-CFLAGS += -fno-unwind-tables -ffunction-sections -fdata-sections -fmessage-length=0
-CFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding
-CFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard 
-
-
-
-CXXFLAGS += -g  
-
-CXXFLAGS += -O3 
-CXXFLAGS += -mthumb -mlittle-endian -mcpu=cortex-m7 -ffreestanding
-CXXFLAGS += -fomit-frame-pointer
-CXXFLAGS += -fno-threadsafe-statics -fno-unwind-tables
-CXXFLAGS += -ffunction-sections -fdata-sections -fmessage-length=0 
-CXXFLAGS += -Wsign-compare -Wdouble-promotion -Wshadow -Wunused-variable 
-CXXFLAGS += -Wmissing-field-initializers -Wunused-function -Wswitch -Wvla -Wall -Wextra
-CXXFLAGS += -Wstrict-aliasing -Wno-unused-parameter   
-CXXFLAGS += -mfpu=fpv5-sp-d16 -mfloat-abi=hard 
-
-
-CFLAGS += -DTF_LITE_STATIC_MEMORY -DTF_LITE_DISABLE_X86_NEON -DTF_LITE_USE_CTIME 
-CXXFLAGS += -DTF_LITE_STATIC_MEMORY -DTF_LITE_DISABLE_X86_NEON -DTF_LITE_USE_CTIME -D__STDCPP_WANT_MATH_SPEC_FUNCS__
