--- a/platform/exacto/templates/afina/sdtester/mods.conf
+++ b/platform/exacto/templates/afina/sdtester/mods.conf
@@ -7,10 +7,12 @@ configuration conf {
 	include platform.exacto.afina.basis.bsp	
 	include platform.exacto.afina.basis.arch
 
-	@Runlevel(0) include third_party.bsp.stmf7cube.sdram(fmc_swap=true)
+//	@Runlevel(0) include third_party.bsp.stmf7cube.sdram(fmc_swap=true)
 	include embox.arch.arm.vfork
 
 	@Runlevel(0) include embox.kernel.stack(stack_size=8192,alignment=4)
+
+
 
 	/* Enable FPU */
 	@Runlevel(0) include embox.arch.arm.fpu.cortex_m7_fp
@@ -29,10 +31,11 @@ configuration conf {
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__stm_usart_f7")
 	@Runlevel(1) include embox.driver.serial.stm_ttyS0(baud_rate=115200, usartx=1)
 	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd
+	@Runlevel(2) include embox.driver.block.partition
 
 
-	include embox.driver.flash.stm32f7cube(flash_size=0x18000)
-	include embox.driver.flash.flash_fs
+//	include embox.driver.flash.stm32f7cube(flash_size=0x18000)
+//	include embox.driver.flash.flash_fs
 
 
 	@Runlevel(2) include embox.test.kernel.thread.thread_test
@@ -51,7 +54,7 @@ configuration conf {
 	include embox.kernel.sched.idle_light
 
 	include embox.kernel.lthread.lthread
-	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=8192)
+	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=5000)
 
 	/* tty requires */
 	include embox.kernel.thread.mutex
@@ -72,11 +75,12 @@ configuration conf {
 	include embox.cmd.fs.cd
 	include embox.cmd.fs.touch
 	include embox.cmd.fs.cp
+	include embox.cmd.fs.echo
 	include embox.cmd.fs.mkdir
 	include embox.cmd.fs.dd
 	include embox.cmd.hw.partition	
 	include embox.cmd.hw.lsblk
-	include embox.driver.block.partition
+//	include embox.driver.block.partition
 	
 	//include embox.cmd.testing.fb_direct_access
 	//include embox.driver.video.fb
@@ -106,7 +110,9 @@ configuration conf {
 	include embox.fs.driver.initfs_dvfs
 	include embox.fs.driver.devfs_dvfs
 	include embox.fs.rootfs_dvfs(fstype="initfs")
-	@Runlevel(2) include embox.fs.driver.fat_dvfs
+	include embox.fs.driver.fat_dvfs(log_level=1)
+	//@Runlevel(2) include embox.fs.driver.fat_dvfs
+	include embox.compat.libc.stdio.rename_dvfs
 
 	include embox.driver.char_dev
 
@@ -118,16 +124,16 @@ configuration conf {
 	//@Runlevel(3) include exacto.afina.spi.spi1master
 	//include exacto.cmds.tests.spi_dma_transmit_receive
 	//include exacto.cmds.tests.spi_dma_receive_transmit
-	include exacto.cmds.tests.spi_dma_one_txrx
+	//include exacto.cmds.tests.spi_dma_one_txrx
 	include exacto.cmds.tests.print_to_sd
 	//@Runlevel(3) include exacto.afina.tim.tim3
 	//include exacto.cmds.tests.tim_printer
 	//include exacto.cmds.tests.spi_dma_tim_based
-	include exacto.cmds.tests.lights
-	include exacto.afina.blink.basic
+	//include exacto.cmds.tests.lights
+	//include exacto.afina.blink.basic
 	//include exacto.cmds.sensor.storage_run
-	include exacto.cmds.mliner.disable_spi_master
-	include exacto.cmds.mliner.enable_spi_master
+	//include exacto.cmds.mliner.disable_spi_master
+	//include exacto.cmds.mliner.enable_spi_master
 	//@Runlevel(2) include exacto.afina.gpio.gpio_spi
 
 	// include exacto.commander.filemanager
