start inplement MVP afina

--- a/platform/exacto/templates/afina/mliner/mods.conf
+++ b/platform/exacto/templates/afina/mliner/mods.conf
@@ -72,6 +72,7 @@ configuration conf {
 	include embox.cmd.fs.ls
 	include embox.cmd.fs.cat
 	include embox.cmd.fs.mount
+	include embox.cmd.fs.rm
 	include embox.cmd.fs.cd
 	include embox.cmd.fs.touch
 	include embox.cmd.fs.cp
@@ -80,7 +81,6 @@ configuration conf {
 	include embox.cmd.fs.dd
 	include embox.cmd.hw.partition	
 	include embox.cmd.hw.lsblk
-//	include embox.driver.block.partition
 	
 	//include embox.cmd.testing.fb_direct_access
 	//include embox.driver.video.fb
@@ -121,20 +121,11 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	//@Runlevel(3) include exacto.afina.spi.spi1master
-	//include exacto.cmds.tests.spi_dma_transmit_receive
-	//include exacto.cmds.tests.spi_dma_receive_transmit
-	//include exacto.cmds.tests.spi_dma_one_txrx
+	@Runlevel(3) include exacto.afina.spi.spi1master
 	include exacto.cmds.tests.print_to_sd
-	//@Runlevel(3) include exacto.afina.tim.tim3
-	//include exacto.cmds.tests.tim_printer
-	//include exacto.cmds.tests.spi_dma_tim_based
-	//include exacto.cmds.tests.lights
-	//include exacto.afina.blink.basic
-	//include exacto.cmds.sensor.storage_run
-	//include exacto.cmds.mliner.disable_spi_master
-	//include exacto.cmds.mliner.enable_spi_master
-	//@Runlevel(2) include exacto.afina.gpio.gpio_spi
+	@Runlevel(3) include exacto.afina.tim.tim3
+	include exacto.cmds.tests.spi_dma_tim_based
+	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 
 	// include exacto.commander.filemanager
 }
