--- a/platform/exacto/templates/afina/mliner/mods.conf
+++ b/platform/exacto/templates/afina/mliner/mods.conf
@@ -120,12 +120,15 @@ configuration conf {
 	include embox.compat.posix.fs.all_dvfs
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
-
-	@Runlevel(3) include exacto.afina.spi.spi1master
-	include exacto.cmds.tests.print_to_sd
-	@Runlevel(3) include exacto.afina.tim.tim3
-	include exacto.cmds.tests.spi_dma_tim_based
+	
+	
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
+	@Runlevel(3) include exacto.afina.spi.spi1master
+	@Runlevel(3) include exacto.afina.tim.tim3
+	
+	include exacto.cmds.tests.spi_dma_one_txrx
+	include exacto.cmds.tests.spi_dma_tim_based
+	include exacto.cmds.tests.print_to_sd
 
 	// include exacto.commander.filemanager
 }
