unity mliner codes

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -115,10 +115,11 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	@Runlevel(3) include exacto.afina.spi.spi1master
+	//@Runlevel(3) include exacto.afina.spi.spi1master
+	@Runlevel(3) include exacto.spi.mliner_afina
 	//include exacto.cmds.tests.spi_dma_transmit_receive
 	//include exacto.cmds.tests.spi_dma_receive_transmit
-	include exacto.cmds.tests.spi_dma_one_txrx
+	//include exacto.cmds.tests.spi_dma_one_txrx
 	include exacto.cmds.tests.print_to_sd
 	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.cmds.tests.tim_printer
@@ -126,8 +127,8 @@ configuration conf {
 	include exacto.cmds.tests.lights
 	include exacto.afina.blink.basic
 	//include exacto.cmds.sensor.storage_run
-	include exacto.cmds.mliner.disable_spi_master
-	include exacto.cmds.mliner.enable_spi_master
+	//include exacto.cmds.mliner.disable_spi_master
+	//include exacto.cmds.mliner.enable_spi_master
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 
 	// include exacto.commander.filemanager
