--- a/platform/exacto/templates/afina/basis/mods.conf
+++ b/platform/exacto/templates/afina/basis/mods.conf
@@ -6,16 +6,8 @@ configuration conf {
 	@Runlevel(0) include embox.arch.arm.cortexm3.bundle
 	include platform.exacto.afina.basis.bsp	
 	include platform.exacto.afina.basis.arch
+
 	@Runlevel(0) include third_party.bsp.stmf7cube.sdram(fmc_swap=true)
-	/* Can be enabled after SD card will be fixed. Currently it uses DMA
-	 * and may become broken. */
-	/*
-	@Runlevel(0) include embox.arch.arm.armmlib.armv7m_cpu_cache(
-		log_level=4,
-		sram_nocache_section_size=0x4000,
-		nocache_region0_addr=0x60000000, nocache_region0_size=0x00100000
-	)
-	*/
 	include embox.arch.arm.vfork
 
 	@Runlevel(0) include embox.kernel.stack(stack_size=8192,alignment=4)
@@ -35,25 +27,13 @@ configuration conf {
 	include embox.kernel.time.jiffies(cs_name="cortexm_systick")
 	@Runlevel(1) include embox.driver.serial.stm_usart_f7(baud_rate=115200, usartx=1)
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__stm_usart_f7")
-	//@Runlevel(1) include embox.driver.serial.stm_ttyS1(baud_rate=115200, usartx=6)
 	@Runlevel(1) include embox.driver.serial.stm_ttyS0(baud_rate=115200, usartx=1)
-	//@Runlevel(1) include embox.driver.flash.stm32f7_qspi
-	//@Runlevel(1) include embox.driver.video.stm32f7_lcd(fb_base=0x60000000)
 	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd
 
-	/* Touchscreen shares INT pin with SD detect. */
-	/*
-	include embox.cmd.hw.input
-	//@Runlevel(2) include embox.driver.input.touchscreen.stm32f7cube_ts
-	//@Runlevel(2) include embox.driver.input.input_dev_devfs
-	//include embox.cmd.testing.input.touchscreen_test
-	*/
 
 	include embox.driver.flash.stm32f7cube(flash_size=0x18000)
 	include embox.driver.flash.flash_fs
 
-	//@Runlevel(2) include embox.driver.net.stm32f7cube_eth
-	//@Runlevel(2) include embox.driver.net.loopback
 
 	@Runlevel(2) include embox.test.kernel.thread.thread_test
 	@Runlevel(2) include embox.test.math.math_test
@@ -67,59 +47,43 @@ configuration conf {
 	include embox.kernel.thread.thread_cancel_disable
 	include embox.kernel.thread.signal.siginfoq(siginfo_pool_sz=8)
 	include embox.kernel.timer.sleep
-	/*
-	include embox.net.skbuff(amount_skb=10)
-	include embox.net.skbuff_data(amount_skb_data=10)
-	include embox.net.sock_noxattr
-	include embox.net.tcp
-	include embox.net.tcp_sock
-	include embox.net.udp
-	include embox.net.udp_sock
-	*/
 	include embox.kernel.sched.sched
 	include embox.kernel.sched.idle_light
 
 	include embox.kernel.lthread.lthread
-	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=5000)
+	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=8192)
 
 	/* tty requires */
 	include embox.kernel.thread.mutex
-	include embox.driver.tty.tty(rx_buff_sz=16, io_buff_sz=16)
+	include embox.driver.tty.tty(rx_buff_sz=32, io_buff_sz=32)
 	include embox.driver.tty.task_breaking_disable
 
 	@Runlevel(2) include embox.cmd.msleep
-	//@Runlevel(2) include embox.cmd.shell
-	@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "cd export exit logout httpd")
-	//include embox.init.setup_tty_diag
+	@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "export exit logout httpd")
 	@Runlevel(3) include embox.init.start_script(shell_name="tish", tty_dev="ttyS0", shell_start=1, stop_on_error=true)
 	include embox.init.system_start_service(log_level=3, tty_dev="ttyS0")
-	//@Runlevel(3) include embox.init.start_script(shell_name="diag_shell")
 
 	include embox.cmd.mem
 	include embox.cmd.goto
-	//include embox.cmd.net.tftp
-	//include embox.cmd.qspi_loader
 	include embox.cmd.service
 	include embox.cmd.fs.ls
 	include embox.cmd.fs.cat
 	include embox.cmd.fs.mount
-	/*
-	include embox.cmd.net.netmanager
-	include embox.cmd.net.ifconfig
-	include embox.cmd.net.route
-	include embox.cmd.net.ping
-	include embox.cmd.net.telnetd
-	include embox.cmd.net.httpd(use_real_cmd=true)
-	include embox.cmd.net.httpd_cgi
-	*/
-	//include embox.service.http_admin
-	//include embox.demo.website
+	include embox.cmd.fs.cd
+	include embox.cmd.fs.touch
+	include embox.cmd.fs.cp
+	include embox.cmd.fs.mkdir
+	include embox.cmd.fs.dd
+	include embox.cmd.hw.partition	
+	include embox.cmd.hw.lsblk
+	include embox.driver.block.partition
+	
+	//include embox.cmd.testing.fb_direct_access
+	//include embox.driver.video.fb
 
 	include embox.compat.posix.proc.vfork_exchanged
 	include embox.compat.posix.proc.exec_exchanged
 
-	//include embox.cmd.testing.fb_direct_access
-	//include embox.cmd.testing.block_dev_test
 
 	include embox.util.hashtable
 	include embox.cmd.help
@@ -142,7 +106,7 @@ configuration conf {
 	include embox.fs.driver.initfs_dvfs
 	include embox.fs.driver.devfs_dvfs
 	include embox.fs.rootfs_dvfs(fstype="initfs")
-	include embox.fs.driver.fat_dvfs
+	@Runlevel(2) include embox.fs.driver.fat_dvfs
 
 	include embox.driver.char_dev
 
@@ -151,5 +115,21 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	include exacto.cmds.report.main_report
+	//@Runlevel(3) include exacto.afina.spi.spi1master
+	@Runlevel(3) include exacto.spi.mliner_afina
+	//include exacto.cmds.tests.spi_dma_transmit_receive
+	//include exacto.cmds.tests.spi_dma_receive_transmit
+	//include exacto.cmds.tests.spi_dma_one_txrx
+	include exacto.cmds.tests.print_to_sd
+	@Runlevel(3) include exacto.afina.tim.tim3
+	include exacto.cmds.tests.tim_printer
+	include exacto.cmds.tests.spi_dma_tim_based
+	include exacto.cmds.tests.lights
+	include exacto.afina.blink.basic
+	//include exacto.cmds.sensor.storage_run
+	//include exacto.cmds.mliner.disable_spi_master
+	//include exacto.cmds.mliner.enable_spi_master
+	@Runlevel(2) include exacto.afina.gpio.gpio_spi
+
+	// include exacto.commander.filemanager
 }
