union mline spi driver

--- a/platform/exacto/templates/apollon/exstart/mods.conf
+++ b/platform/exacto/templates/apollon/exstart/mods.conf
@@ -72,7 +72,8 @@ configuration conf {
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
 
-	@Runlevel(2) include exacto.apollon.spi.spi2slave
+	//@Runlevel(2) include exacto.apollon.spi.spi2slave
+	@Runlevel(2) include exacto.spi.mliner_apollon
 	//@Runlevel(2) include exacto.apollon.spi.spi1
 	@Runlevel(2) include exacto.spi.sns_apollon
 	@Runlevel(2) include exacto.apollon.tim.tim3
