add external lib to project

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -131,5 +131,5 @@ configuration conf {
 	//include exacto.cmds.mliner.enable_spi_master
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 
-	// include exacto.commander.filemanager
+	include exacto.exactolink.basis_code
 }
