add test ex sensor

--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -73,12 +73,13 @@ configuration conf {
 	include embox.compat.posix.util.time
 
 	//@Runlevel(2) include exacto.spi.mliner_apollon
-	//@Runlevel(2) include exacto.spi.sns_apollon
+	@Runlevel(2) include exacto.spi.sns_apollon
 	@Runlevel(2) include exacto.apollon.tim.tim3
 	
 	//@Runlevel(2) include exacto.cmds.sensor.sns_service
-	//@Runlevel(2) include exacto.apollon.gpio.gpio_spi
+	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 	//include exacto.cmds.mliner.spi_txrx
 
 	include exacto.cmds.perf_tests.ex_tim
+	include exacto.cmds.perf_tests.ex_sensor
 }
