--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -80,6 +80,7 @@ configuration conf {
 	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 	//include exacto.cmds.mliner.spi_txrx
 
-	include exacto.cmds.perf_tests.ex_tim
-	include exacto.cmds.perf_tests.ex_sensor
+	//include exacto.cmds.perf_tests.ex_tim
+	//include exacto.cmds.perf_tests.ex_sensor
+	include exacto.cmds.perf_tests.ex_sns_sender_smpl
 }
