--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -82,5 +82,6 @@ configuration conf {
 
 	//include exacto.cmds.perf_tests.ex_tim
 	//include exacto.cmds.perf_tests.ex_sensor
-	include exacto.cmds.perf_tests.ex_sns_sender_smpl
+	//include exacto.cmds.perf_tests.ex_sns_sender_smpl
+	include exacto.cmds.perf_tests.ex_sns_sender_bs
 }
