add perf tests for afina

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -132,4 +132,6 @@ configuration conf {
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 
 	//include exacto.exactolink.basis_code
+	include exacto.cmds.perf_tests.ex_tim
+	include exacto.cmds.perf_tests.ex_sd_print
 }
