--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -72,16 +72,17 @@ configuration conf {
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
 
-	//@Runlevel(2) include exacto.spi.mliner_apollon
+	@Runlevel(2) include exacto.spi.mliner_apollon
 	@Runlevel(2) include exacto.spi.sns_apollon
 	@Runlevel(2) include exacto.apollon.tim.tim3
 	
-	//@Runlevel(2) include exacto.cmds.sensor.sns_service
+	@Runlevel(2) include exacto.cmds.sensor.sns_service
 	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 	//include exacto.cmds.mliner.spi_txrx
 
 	//include exacto.cmds.perf_tests.ex_tim
 	//include exacto.cmds.perf_tests.ex_sensor
 	//include exacto.cmds.perf_tests.ex_sns_sender_smpl
-	include exacto.cmds.perf_tests.ex_sns_sender_bs
+	//include exacto.cmds.perf_tests.ex_sns_sender_bs
+	include exacto.cmds.mliner.ex_spi_mline_apollon
 }
