update mliner for afina

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -134,4 +134,5 @@ configuration conf {
 	//include exacto.exactolink.basis_code
 	include exacto.cmds.perf_tests.ex_tim
 	include exacto.cmds.perf_tests.ex_sd_print
+	include exacto.cmds.mliner.ex_spi_mline_afina
 }
