data storage updating

--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -72,7 +72,7 @@ configuration conf {
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
 
-	//@Runlevel(2) include exacto.spi.mliner_apollon
+	@Runlevel(2) include exacto.spi.mliner_apollon
 	@Runlevel(2) include exacto.spi.sns_apollon
 	//@Runlevel(2) include exacto.tim.apollon_tim3
 	@Runlevel(2) include exacto.apollon.tim.tim3
@@ -87,4 +87,5 @@ configuration conf {
 	//include exacto.cmds.perf_tests.ex_sns_sender_smpl
 	include exacto.cmds.perf_tests.ex_sns_sender_bs
 	//include exacto.cmds.mliner.ex_spi_mline_apollon
+	include exacto.cmds.tests.data_storage_update
 }
