--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -73,11 +73,11 @@ configuration conf {
 	include embox.compat.posix.util.time
 
 	@Runlevel(2) include exacto.spi.mliner_apollon
-	@Runlevel(2) include exacto.spi.sns_apollon
+	//@Runlevel(2) include exacto.spi.sns_apollon
 	//@Runlevel(2) include exacto.tim.apollon_tim3
 	@Runlevel(2) include exacto.apollon.tim.tim3
 	
-	@Runlevel(2) include exacto.cmds.sensor.sns_service
+	//@Runlevel(2) include exacto.cmds.sensor.sns_service
 	@Runlevel(2) include exacto.apollon.gpio.gpio_spi
 	//include exacto.cmds.mliner.spi_txrx
 
@@ -86,6 +86,7 @@ configuration conf {
 	//include exacto.cmds.perf_tests.ex_sensor
 	//include exacto.cmds.perf_tests.ex_sns_sender_smpl
 	//include exacto.cmds.perf_tests.ex_sns_sender_bs
-	include exacto.cmds.mliner.ex_spi_mline_apollon
+	//include exacto.cmds.mliner.ex_spi_mline_apollon
 	//include exacto.cmds.tests.data_storage_update
+	include exacto.cmds.perf_tests.spi_ml_rx_apollon
 }
