gpio on irq react

--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -43,7 +43,7 @@ configuration conf {
 	@Runlevel(2) include embox.kernel.sched.timing.none
 
 	//include embox.cmd.sys.version
-	include embox.cmd.help
+	//include embox.cmd.help
 
 	@Runlevel(2) include embox.cmd.shell
 	include embox.init.setup_tty_diag
