add crc and led blinking

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -135,4 +135,5 @@ configuration conf {
 	include exacto.cmds.perf_tests.ex_tim
 	include exacto.cmds.perf_tests.ex_sd_print
 	include exacto.cmds.mliner.ex_spi_mline_afina
+	include exacto.hardtools.basic_afina
 }
