--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -87,4 +87,5 @@ configuration conf {
 	//include exacto.cmds.perf_tests.ex_sns_sender_smpl
 	//include exacto.cmds.perf_tests.ex_sns_sender_bs
 	include exacto.cmds.mliner.ex_spi_mline_apollon
+	include exacto.hardtools.basic_apollon
 }
