--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -56,7 +56,7 @@ configuration conf {
 	/* tty requires */
 	include embox.kernel.thread.mutex
 	include embox.driver.tty.tty(rx_buff_sz=32, io_buff_sz=32)
-	include embox.driver.tty.task_breaking_disable
+	//include embox.driver.tty.task_breaking_disable
 
 	@Runlevel(2) include embox.cmd.msleep
 	@Runlevel(2) include embox.cmd.sh.tish(builtin_commands = "export exit logout httpd")
