add fifo buffer checker

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -136,4 +136,6 @@ configuration conf {
 	include exacto.cmds.perf_tests.ex_sd_print
 	include exacto.cmds.mliner.ex_spi_mline_afina
 	include exacto.hardtools.basic_afina
+	
+	include exacto.cmds.tests.buffer_fifo_test
 }
