add option for buffers

--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -28,7 +28,7 @@ configuration conf {
 	@Runlevel(1) include embox.driver.serial.stm_usart_f7(baud_rate=115200, usartx=1)
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__stm_usart_f7")
 	@Runlevel(1) include embox.driver.serial.stm_ttyS0(baud_rate=115200, usartx=1)
-	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd
+	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd(sd_buf_size = 4096)
 
 
 	include embox.driver.flash.stm32f7cube(flash_size=0x18000)
@@ -130,6 +130,8 @@ configuration conf {
 	//include exacto.cmds.mliner.disable_spi_master
 	//include exacto.cmds.mliner.enable_spi_master
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
+	include exacto.commander.buffer(buffersz = 8192)
+	include exacto.commander.data_storage(exactolinkbuffersz = 128)
 
 	//include exacto.exactolink.basis_code
 	include exacto.cmds.perf_tests.ex_tim
