--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -28,7 +28,7 @@ configuration conf {
 	@Runlevel(1) include embox.driver.serial.stm_usart_f7(baud_rate=115200, usartx=1)
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__stm_usart_f7")
 	@Runlevel(1) include embox.driver.serial.stm_ttyS0(baud_rate=115200, usartx=1)
-	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd(sd_buf_size = 4096)
+	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd(use_local_buf = true)
 
 
 	include embox.driver.flash.stm32f7cube(flash_size=0x18000)
