--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -72,6 +72,7 @@ configuration conf {
 	include embox.compat.libc.stdio.print(support_floating=0)
 	include embox.compat.posix.util.time
 
+	include exacto.commander.data_storage(exactolinkbuffersz = 512)
 	@Runlevel(2) include exacto.spi.mliner_apollon
 	@Runlevel(2) include exacto.spi.sns_apollon
 	//@Runlevel(2) include exacto.tim.apollon_tim3
