--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -121,7 +121,7 @@ configuration conf {
 	//include exacto.cmds.tests.spi_dma_receive_transmit
 	//include exacto.cmds.tests.spi_dma_one_txrx
 	include exacto.cmds.tests.print_to_sd
-	//@Runlevel(3) include exacto.afina.tim.tim3
+	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.cmds.tests.tim_printer
 	include exacto.cmds.tests.spi_dma_tim_based
 	include exacto.cmds.tests.lights
