--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -8,6 +8,11 @@ configuration conf {
 	include platform.exacto.afina.basis.arch
 
 	@Runlevel(0) include third_party.bsp.stmf7cube.sdram(fmc_swap=true)
+	@Runlevel(0) include embox.arch.arm.armmlib.armv7m_cpu_cache(
+		log_level=4,
+		sram_nocache_section_size=0x4000,
+		nocache_region0_addr=0x60000000, nocache_region0_size=0x00100000
+	)
 	include embox.arch.arm.vfork
 
 	@Runlevel(0) include embox.kernel.stack(stack_size=8192,alignment=4)
@@ -51,11 +56,11 @@ configuration conf {
 	include embox.kernel.sched.idle_light
 
 	include embox.kernel.lthread.lthread
-	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=8192)
+	include embox.kernel.thread.core(thread_pool_size=16, thread_stack_size=5000)
 
 	/* tty requires */
 	include embox.kernel.thread.mutex
-	include embox.driver.tty.tty(rx_buff_sz=32, io_buff_sz=32)
+	include embox.driver.tty.tty(rx_buff_sz=16, io_buff_sz=16)
 	//include embox.driver.tty.task_breaking_disable
 
 	@Runlevel(2) include embox.cmd.msleep
