--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -37,6 +37,7 @@ configuration conf {
 
 	@Runlevel(2) include embox.test.kernel.thread.thread_test
 	@Runlevel(2) include embox.test.math.math_test
+	@Runlevel(2) include embox.test.mem.heap
 
 	include embox.kernel.task.multi
 	include embox.kernel.task.resource.idesc_table(idesc_table_size=32)
