--- a/platform/exacto/templates/afina/tests/mods.conf
+++ b/platform/exacto/templates/afina/tests/mods.conf
@@ -136,7 +136,7 @@ configuration conf {
 	//include exacto.cmds.mliner.disable_spi_master
 	//include exacto.cmds.mliner.enable_spi_master
 	// @Runlevel(2) include exacto.afina.gpio.gpio_spi
-	//include exacto.commander.buffer(buffersz = 8192)
+	include exacto.commander.buffer(buffersz = 8192)
 	//include exacto.commander.data_storage(exactolinkbuffersz = 512)
 
 	//include exacto.exactolink.basis_code
