--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -131,7 +131,7 @@ configuration conf {
 	//include exacto.cmds.mliner.enable_spi_master
 	@Runlevel(2) include exacto.afina.gpio.gpio_spi
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
-	include exacto.commander.data_storage(exactolinkbuffersz = 512)
+	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=true)
 
 	//include exacto.exactolink.basis_code
 	include exacto.cmds.perf_tests.ex_tim
