--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -70,7 +70,7 @@ configuration conf {
 	include embox.util.dlist
 	include embox.framework.embuild_light(use_mod_names=true)
 	include embox.compat.libc.stdio.print(support_floating=0)
-	include embox.compat.posix.util.time
+//	include embox.compat.posix.util.time
 	
 	include exacto.commander.buffer(buffersz = 1024, extbuffersz = 128)
 	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=false)
