add init cmd for spi tests

--- a/platform/exacto/templates/afina/fin_tests/mods.conf
+++ b/platform/exacto/templates/afina/fin_tests/mods.conf
@@ -131,13 +131,13 @@ configuration conf {
 	include exacto.cmds.tests.spi_dma_tim_based
 	include exacto.cmds.tests.lights
 	include exacto.afina.blink.basic
-	@Runlevel(2) include exacto.afina.gpio.gpio_spi
+	//@Runlevel(2) include exacto.afina.gpio.gpio_spi
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
 	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=true, use_printk=true)
 
 	include exacto.cmds.perf_tests.ex_tim
 	include exacto.cmds.perf_tests.ex_sd_print
-	include exacto.cmds.mliner.ex_spi_mline_afina
+	include exacto.cmds.mliner.spi_main
 	include exacto.hardtools.basic_afina
 	
 	include exacto.cmds.tests.buffer_fifo_test
