--- a/platform/exacto/templates/afina/fin_tests/mods.conf
+++ b/platform/exacto/templates/afina/fin_tests/mods.conf
@@ -115,30 +115,17 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-	//@Runlevel(3) include exacto.afina.spi.spi1master
-	//include exacto.cmds.tests.spi_dma_transmit_receive
-	//include exacto.cmds.tests.spi_dma_receive_transmit
-	//include exacto.cmds.tests.spi_dma_one_txrx
-	//include exacto.cmds.sensor.storage_run
-	//include exacto.cmds.mliner.disable_spi_master
-	//include exacto.cmds.mliner.enable_spi_master
-	//include exacto.exactolink.basis_code
 
-	@Runlevel(3) include exacto.spi.mline_afina_main
-	include exacto.cmds.tests.print_to_sd
+	include exacto.gpio.afina.small.config
+
+	@Runlevel(3) include exacto.spi.mline_main
 	@Runlevel(3) include exacto.afina.tim.tim3
-	include exacto.cmds.tests.tim_printer
-	include exacto.cmds.tests.spi_dma_tim_based
-	include exacto.cmds.tests.lights
-	include exacto.afina.blink.basic
-	//@Runlevel(2) include exacto.afina.gpio.gpio_spi
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
 	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=true, use_printk=true)
 
-	include exacto.cmds.perf_tests.ex_tim
-	include exacto.cmds.perf_tests.ex_sd_print
+//	include exacto.cmds.perf_tests.ex_tim
+//	include exacto.cmds.perf_tests.ex_sd_print
 	include exacto.cmds.mliner.spi_main
 	include exacto.hardtools.basic_afina
 	
-	include exacto.cmds.tests.buffer_fifo_test
 }
