--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -4,8 +4,8 @@ package genconfig
 configuration conf {
 	@Runlevel(0) include embox.arch.system(core_freq=216000000)
 	@Runlevel(0) include embox.arch.arm.cortexm3.bundle
-	include platform.exacto.afina.small.bsp	
-	include platform.exacto.afina.small.arch
+	include platform.exacto.afina.basis.bsp	
+	include platform.exacto.afina.basis.arch
 
 	@Runlevel(0) include third_party.bsp.stmf7cube.sdram(fmc_swap=true)
 	include embox.arch.arm.vfork
@@ -25,9 +25,9 @@ configuration conf {
 	@Runlevel(1) include embox.driver.interrupt.cortexm_nvic
 	@Runlevel(1) include embox.driver.clock.cortexm_systick
 	include embox.kernel.time.jiffies(cs_name="cortexm_systick")
-	@Runlevel(1) include embox.driver.serial.stm_usart_f7(baud_rate=115200, usartx=2)
+	@Runlevel(1) include embox.driver.serial.stm_usart_f7(baud_rate=115200, usartx=1)
 	@Runlevel(1) include embox.driver.diag(impl="embox__driver__serial__stm_usart_f7")
-	@Runlevel(1) include embox.driver.serial.stm_ttyS0(baud_rate=115200, usartx=2)
+	@Runlevel(1) include embox.driver.serial.stm_ttyS0(baud_rate=115200, usartx=1)
 	@Runlevel(2) include embox.driver.sd.stm32f746g_discovery_sd(use_local_buf = true)
 
 
@@ -115,8 +115,7 @@ configuration conf {
 	include embox.fs.syslib.perm_stub
 	include embox.driver.block_dev
 
-
-	include exacto.gpio.afina.small.config
+	include exacto.gpio.afina.basis.config
 
 	@Runlevel(3) include exacto.spi.mline_main
 	@Runlevel(3) include exacto.afina.tim.tim3
