add gpio startup

--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -117,6 +117,9 @@ configuration conf {
 
 	include exacto.gpio.afina.basis.config
 
+	//@Runlevel(2) include exacto.gpio.led
+	//@Runlevel(2) include exacto.gpio.mline_spi_main
+
 	@Runlevel(3) include exacto.spi.mline_main
 	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
