--- a/platform/exacto/templates/afina/cliner/mods.conf
+++ b/platform/exacto/templates/afina/cliner/mods.conf
@@ -120,24 +120,24 @@ configuration conf {
 	//include exacto.cmds.tests.spi_dma_transmit_receive
 	//include exacto.cmds.tests.spi_dma_receive_transmit
 	//include exacto.cmds.tests.spi_dma_one_txrx
-	include exacto.cmds.tests.print_to_sd
+	//include exacto.cmds.tests.print_to_sd
 	@Runlevel(3) include exacto.afina.tim.tim3
-	include exacto.cmds.tests.tim_printer
-	include exacto.cmds.tests.spi_dma_tim_based
-	include exacto.cmds.tests.lights
-	include exacto.afina.blink.basic
+	//include exacto.cmds.tests.tim_printer
+	//include exacto.cmds.tests.spi_dma_tim_based
+	//include exacto.cmds.tests.lights
+	//include exacto.afina.blink.basic
 	//include exacto.cmds.sensor.storage_run
 	//include exacto.cmds.mliner.disable_spi_master
 	//include exacto.cmds.mliner.enable_spi_master
-	@Runlevel(2) include exacto.afina.gpio.gpio_spi
+	//@Runlevel(2) include exacto.afina.gpio.gpio_spi
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
 	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=true, use_printk=true)
 
 	//include exacto.exactolink.basis_code
-	include exacto.cmds.perf_tests.ex_tim
-	include exacto.cmds.perf_tests.ex_sd_print
+	//include exacto.cmds.perf_tests.ex_tim
+	//include exacto.cmds.perf_tests.ex_sd_print
 	include exacto.cmds.mliner.ex_spi_mline_afina
 	include exacto.hardtools.basic_afina
 	
-	include exacto.cmds.tests.buffer_fifo_test
+	//include exacto.cmds.tests.buffer_fifo_test
 }
