create independent storage for afina and apollon

--- a/platform/exacto/templates/apollon/perf_tests/mods.conf
+++ b/platform/exacto/templates/apollon/perf_tests/mods.conf
@@ -73,7 +73,8 @@ configuration conf {
 //	include embox.compat.posix.util.time
 	
 	include exacto.commander.buffer(buffersz = 1024, extbuffersz = 128)
-	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=false)
+	include exacto.commander.data_storage_refs(exactolinkbuffersz = 512,use_extended_fun=false)
+	include exacto.commander.data_storage_apollon
 	@Runlevel(2) include exacto.spi.mliner_apollon
 	@Runlevel(2) include exacto.spi.sns_apollon
 	//@Runlevel(2) include exacto.tim.apollon_tim3
