add afina data storage

--- a/platform/exacto/templates/afina/fin_tests/mods.conf
+++ b/platform/exacto/templates/afina/fin_tests/mods.conf
@@ -121,7 +121,9 @@ configuration conf {
 	@Runlevel(3) include exacto.spi.mline_main
 	@Runlevel(3) include exacto.afina.tim.tim3
 	include exacto.commander.buffer(buffersz = 2048, extbuffersz = 16384)
-	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=true, use_printk=true)
+//	include exacto.commander.data_storage(exactolinkbuffersz = 512,use_extended_fun=true, use_printk=true)
+	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
+	include exacto.commander.data_storage_afina
 
 	include exacto.cmds.mliner.spi_main
 	include exacto.hardtools.basic_afina
