--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -137,7 +137,9 @@ configuration conf {
 	include exacto.commander.data_storage_options(exactolinkbuffersz = 512,use_extended_fun=false)
 	include exacto.commander.data_storage_afina
 
-	include exacto.cmds.mliner.spi_main
+	@Runlevel(3) include exacto.mliner.main_mod_afina
+	//include exacto.cmds.mliner.spi_main
+	include exacto.cmds.mliner.test_read_afina
 	include exacto.cmds.mliner.test_cmd_afina
 	
 }
