read state afina

--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -141,5 +141,7 @@ configuration conf {
 	//include exacto.cmds.mliner.spi_main
 	include exacto.cmds.mliner.test_read_afina
 	include exacto.cmds.mliner.test_cmd_afina
+	include exacto.cmds.mliner.start_mliner_afina
+	include exacto.cmds.mliner.stop_mliner_afina
 	
 }
