--- a/platform/exacto/templates/apollon/fastread/mods.conf
+++ b/platform/exacto/templates/apollon/fastread/mods.conf
@@ -87,7 +87,9 @@ configuration conf {
 	//include exacto.cmds.perf_tests.ex_sensor
 	//include exacto.cmds.perf_tests.ex_sns_sender_smpl
 	//include exacto.cmds.perf_tests.ex_sns_sender_bs
-	include exacto.cmds.sensor.sns2mliner
+	//include exacto.cmds.sensor.sns2mliner
 	//include exacto.cmds.mliner.ex_spi_mline_apollon
+	@Runlevel(2) include exacto.sensors.apollon_lsmism
+	include exacto.cmds.sensor.lsmism.start
 	include exacto.hardtools.basic_apollon
 }
