apollon test done

--- a/platform/exacto/templates/apollon/fastread/mods.conf
+++ b/platform/exacto/templates/apollon/fastread/mods.conf
@@ -91,5 +91,7 @@ configuration conf {
 	//include exacto.cmds.mliner.ex_spi_mline_apollon
 	@Runlevel(2) include exacto.sensors.apollon_lsmism
 	include exacto.cmds.sensor.lsmism.start
+	include exacto.cmds.sensor.lsmism.stop
+	include exacto.cmds.sensor.lsmism.read
 	include exacto.hardtools.basic_apollon
 }
