--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -143,5 +143,7 @@ configuration conf {
 	include exacto.cmds.mliner.test_cmd_afina
 	include exacto.cmds.mliner.start_mliner_afina
 	include exacto.cmds.mliner.stop_mliner_afina
+
+	include exacto.cmds.tests.print_to_sd
 	
 }
