test file create

--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -145,5 +145,6 @@ configuration conf {
 	include exacto.cmds.mliner.stop_mliner_afina
 
 	include exacto.cmds.tests.print_to_sd
+	include exacto.cmds.tests.print2sd
 	
 }
