--- a/platform/exacto/templates/afina/dev_mline/mods.conf
+++ b/platform/exacto/templates/afina/dev_mline/mods.conf
@@ -144,7 +144,7 @@ configuration conf {
 	include exacto.cmds.mliner.start_mliner_afina
 	include exacto.cmds.mliner.stop_mliner_afina
 
-	include exacto.cmds.tests.print_to_sd
-	include exacto.cmds.tests.print2sd
-	
+	@Runlevel(3)	include exacto.cmds.tests.print.smpl_mod
+	include exacto.cmds.tests.print.start
+	include exacto.cmds.tests.print.check
 }
